force-app/main/default/objects/User_Skill__c/User_Skill__c.object-meta.xml
<CustomObject>
    <label>User Skill</label>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>User Skill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>