force-app/main/default/objects/User_Skill__c/fields/Certification_Pass_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Pass_Date__c</fullName>
    <label>Certification Pass Date</label>
    <type>Date</type>
</CustomField>