force-app/main/default/objects/User_Skill__c/fields/Certification_Passed__c.field-meta.xml
<CustomField>
    <fullName>Certification_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification Passed</label>
    <type>Checkbox</type>
</CustomField>