force-app/main/default/objects/User_Skill__c/fields/Certification_Provider__c.field-meta.xml
<CustomField>
    <fullName>Certification_Provider__c</fullName>
    <label>Certification Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Partner Learning Camp</fullName>
            </value>
            <value>
                <fullName>Hubspot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>