force-app/main/default/objects/User_Skill__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>User Skills</relationshipLabel>
    <relationshipName>User_Skills</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>