force-app/main/default/objects/User_Skill__c/fields/Skill_Value__c.field-meta.xml
<CustomField>
    <fullName>Skill_Value__c</fullName>
    <formula>Case( Skill_Level__c , &quot;Highest&quot;, 5, &quot;High&quot;, 4, &quot;Medium&quot;, 3, &quot;Low&quot;, 2, 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>