force-app/main/default/objects/User_Skill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Skill__c</columns>
    <columns>Skill_Level__c</columns>
    <columns>Certification_Passed__c</columns>
    <columns>Certification_Pass_Date__c</columns>
    <columns>Review_Date__c</columns>
    <columns>Certification_Provider__c</columns>
    <columns>Skill_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>