force-app/main/default/objects/User_Skill__c/listViews/My_User_Skills.listView-meta.xml
<ListView>
    <fullName>My_User_Skills</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Skill__c</columns>
    <columns>Skill_Level__c</columns>
    <columns>Certification_Passed__c</columns>
    <columns>Review_Date__c</columns>
    <columns>Skill_Value__c</columns>
    <filterScope>Mine</filterScope>
    <label>My User Skills</label>
</ListView>